Add code for "clicker", and styling.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <section class="number" id="number">0</section>
+    <button class="click-button" id="click-button">Do not click me, please!</button>
+    <section class="message" id="message"></section>
 
     <script src="./assets/js/index.js"></script>
 </body>
